fix: space between chips 4px on small screen only

--- a/src/components/ControlBar/styles/DashboardItemChip.module.css
+++ b/src/components/ControlBar/styles/DashboardItemChip.module.css
@@ -2,7 +2,6 @@
     display: inline-block;
     text-decoration: none;
     vertical-align: top;
-    margin: 0 -2px;
 }
 .icon {
     height: 20px;
@@ -15,4 +14,10 @@
 }
 .unselected {
     fill: var(--colors-grey700);
+}
+
+@media only screen and (max-width: 480px) {
+    .link {
+        margin: 0 -2px;
+    }
 }
